--- a/src/app.css
+++ b/src/app.css
@@ -91,35 +91,6 @@ textarea.site-input {
     resize: vertical;
 }
 
-/* .popup-buttons {
-    display: flex;
-    gap: 0.5rem;
-    margin-top: 0.5rem;
-}
-
-.popup-buttons button {
-    border-radius: 0.375rem;
-    padding: 3px 8px;
-    font-weight: 500;
-    cursor: pointer;
-    border: none;
-}
-
-.popup-buttons.start-route .route-btn.start-route {
-    display:inline-block;
-}
-.popup-buttons.start-route .route-btn.end-route {
-    display:none;
-}
-
-.popup-buttons.end-route .route-btn.end-route:after {
-    display: inline-block;
-}
-
-.popup-buttons.end-route .route-btn.start-route:after {
-    display: none;
-} */
-
 .dark-theme .mapboxgl-popup-content{
     background-color: rgb(55 65 81); /* bg-gray-600 */
     color: rgb(243 244 246); /* text-gray-100 */
@@ -171,7 +142,35 @@ textarea.site-input {
 
 /* GLOBAL STYLES */
 .btn {
-    @apply bg-blue-600 dark:bg-blue-500 text-white hover:bg-blue-700 dark:hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 rounded-md px-4 py-2 transition-colors duration-200;
+    @apply rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200 focus:ring-2 focus:ring-offset-2;
+}
+
+.btn.primary {
+    @apply rounded-md bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white focus:ring-2 focus:ring-offset-2;
+}
+
+.btn.secondary {
+    @apply rounded-md bg-gray-600 hover:bg-gray-700 dark:bg-gray-500 dark:hover:bg-gray-600 text-white focus:ring-2 focus:ring-offset-2;
+}
+
+.btn.icon {
+    @apply rounded-md bg-transparent;
+}
+
+.btn.menu {
+    @apply p-3 bg-transparent;
+}
+
+.btn.menu.full-width {
+    @apply w-full;
+}
+
+.icon {
+    @apply p-3 rounded-md bg-transparent text-gray-700 dark:text-gray-200 hover:text-gray-100 hover:dark:text-gray-100 hover:bg-blue-600 hover:dark:bg-blue-500;
+}
+
+.icon.selected {
+    @apply text-gray-100 dark:text-gray-100 bg-blue-600 dark:bg-blue-500;
 }
 
 /* Floating dialog styles */
