--- a/src/app.css
+++ b/src/app.css
@@ -142,15 +142,23 @@ textarea.site-input {
 
 /* GLOBAL STYLES */
 .btn {
-    @apply rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200 focus:ring-2 focus:ring-offset-2;
+    @apply px-4 py-1 rounded-sm bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white ;
 }
 
 .btn.primary {
-    @apply rounded-md bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white focus:ring-2 focus:ring-offset-2;
+    @apply  bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white;
+}
+
+.btn.confirm {
+    @apply  bg-green-600 hover:bg-green-700 dark:bg-green-500 dark:hover:bg-green-600 text-white;
 }
 
 .btn.secondary {
-    @apply rounded-md bg-gray-600 hover:bg-gray-700 dark:bg-gray-500 dark:hover:bg-gray-600 text-white focus:ring-2 focus:ring-offset-2;
+    @apply  bg-gray-600 hover:bg-gray-700 dark:bg-gray-500 dark:hover:bg-gray-600 text-white;
+}
+
+.btn.cancel {
+    @apply  bg-gray-600 hover:bg-gray-700 dark:bg-gray-500 dark:hover:bg-gray-600 text-white;
 }
 
 .btn.icon {
