--- a/src/app.css
+++ b/src/app.css
@@ -142,7 +142,7 @@ textarea.site-input {
 
 /* GLOBAL STYLES */
 .btn {
-    @apply px-4 py-1 rounded-sm bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white ;
+    @apply px-4 py-1 rounded-sm bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white focus:outline-none;
 }
 
 .btn.primary {
@@ -166,7 +166,7 @@ textarea.site-input {
 }
 
 .btn.menu {
-    @apply p-3 bg-transparent;
+    @apply p-1 bg-transparent;
 }
 
 .btn.menu.full-width {
@@ -174,7 +174,7 @@ textarea.site-input {
 }
 
 .icon {
-    @apply p-3 rounded-md bg-transparent text-gray-700 dark:text-gray-200 hover:text-gray-100 hover:dark:text-gray-100 hover:bg-blue-600 hover:dark:bg-blue-500;
+    @apply p-2 rounded-md bg-transparent text-gray-700 dark:text-gray-200 hover:text-gray-100 hover:dark:text-gray-100 hover:bg-blue-600 hover:dark:bg-blue-500;
 }
 
 .icon.selected {
