--- a/src/app.css
+++ b/src/app.css
@@ -145,10 +145,12 @@ textarea.site-input {
 /* GLOBAL STYLES */
 
 .btn {
-    @apply bg-transparent border-0 text-base-content dark:text-base-100 
+    @apply bg-transparent border-0 
+    text-base-content dark:text-base-100 
     hover:bg-primary hover:text-white
-    
+    disabled:cursor-not-allowed disabled:opacity-50
 }
+
 .btn-active {
     @apply bg-primary text-white;
 }
